style/note list widget: fix broken CSS selector

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -2560,7 +2560,7 @@ iframe.print-iframe {
 }
 
 .scrolling-container > .note-detail.full-height,
-.scrolling-container > .note-list-widget {
+.scrolling-container > .note-list-widget.full-height {
     position: relative;
     flex-grow: 1;
     width: 100%;
